<resources>
    <string name="app_name">Nam_Nguyen_MyRuns</string>
    <string name="profile_photo">Profile photo</string>
    <string name="contentDescription">Profile photo</string>
    <string name="changeButton">Change your profile photo</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="phone">Phone</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="classOf">Class</string>
    <string name="hint_class">Enter your class (e.g. 2026)</string>
    <string name="major">Major</string>
    <string name="hint_major">Enter your major</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>"
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="input_type">Input type</string>
    <string name="activity_type">Activity type</string>
    <string name="hint_input_type">Select input type</string>
    <string name="hint_activity_type">Select activity type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart_rate">Heart rate</string>
    <string name="comment">Comment (Optional)</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="enter_here">Enter here</string>
    <string name="time_amp_date"><![CDATA[TIME & DATE]]></string>
    <string name="activity_details">ACTIVITY DETAILS</string>
    <string name="delete">Delete</string>
    <string name="input_type_header">Input Type:</string>
    <string name="activity_type_header">Activity Type:</string>
    <string name="duration_header">Duration:</string>
    <string name="comments_header">Comments:</string>
    <string-array name="unit_entries">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>

    <string-array name="unit_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
</resources>